# council

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_digital_twins.py  003_human_participants.py  004_notifications.py  005_security_and_learning.py
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  utils.py
backend/app/engine/: __init__.py  agent_loop.py  debate.py  learning.py  notifications.py  router.py  synthesis.py  tools.py
backend/app/engine/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_provider.py
backend/app/models/: __init__.py  agent.py  council.py
backend/app/routers/: __init__.py  agents.py  councils.py  keys.py  notifications.py  sessions.py
backend/app/schemas/: __init__.py  agent.py  council.py
backend/app/security/: prompt_guard.py
backend/exports/: council_training_data.jsonl
backend/tests/: test_adversarial.py  test_debate_fixes.py  test_tools_and_loop.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/councils/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/agents/: AgentAvatar.tsx  AgentCard.tsx
frontend/components/councils/: EscalationAlert.tsx  HumanJoinModal.tsx  MessageBubble.tsx  PositionRail.tsx  SynthesisPanel.tsx  (+2 more)
frontend/lib/: api.ts  sse.ts  stores.ts  types.ts  utils.ts
seed/: agents.py  run_seed.sh
(+19 files in other folders)
