[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "council-backend"
version = "1.0.0"
description = "Council — Collaborative AI Agent Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "redis[hiredis]>=5.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
    "websockets>=14.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
]

[project.scripts]
council = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
